--- a/mctoexception/mctoexception.csproj
+++ b/mctoexception/mctoexception.csproj
@@ -5,14 +5,29 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C8C96D98-4407-4FCB-98F4-BA11C2240349}</ProjectGuid>
+    <ProjectGuid>{E5978E98-78F5-43B2-965A-30BAD14533E1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>zuki.build.tools</RootNamespace>
-    <AssemblyName>zuki.build.tools.mkversion</AssemblyName>
+    <AssemblyName>zuki.build.tools.mctoexception</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -40,6 +55,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -47,50 +63,15 @@
       <Link>CommandLine.cs</Link>
     </Compile>
     <Compile Include="main.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="MessageExceptions.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MessageExceptions.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MessageExceptionsCode.cs" />
+    <Compile Include="Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemplateCPP.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateCPP.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateCPPCode.cs" />
-    <Compile Include="TemplateCS.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateCS.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateCSCode.cs" />
-    <Compile Include="TemplateFields.cs" />
-    <Compile Include="TemplateINI.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateINI.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateINICode.cs" />
-    <Compile Include="TemplateRC.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateRC.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateRCCode.cs" />
-    <Compile Include="TemplateTXT.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateTXT.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateTXTCode.cs" />
-    <Compile Include="TemplateVB.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateVB.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateVBCode.cs" />
-    <Compile Include="TemplateWXI.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TemplateWXI.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TemplateWXICode.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -112,33 +93,21 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TemplateCPP.tt">
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MessageExceptions.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateCPP.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateCS.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateCS.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateINI.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateINI.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateRC.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateRC.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateTXT.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateTXT.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateVB.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateVB.cs</LastGenOutput>
-    </Content>
-    <Content Include="TemplateWXI.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>TemplateWXI.cs</LastGenOutput>
+      <LastGenOutput>MessageExceptions.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
